--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 /* Body */
 body {
-	font-family: source-sans-pro;
-	background-color: #f2f2f2;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	font-style: normal;
-	font-weight: 200;
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, sans-serif;
+    background-color: #f2f2f2;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    font-style: normal;
+    font-weight: 200;
 }
 /* Container */
 .container {
@@ -20,10 +20,10 @@ body {
 }
 /* Navigation */
 header {
-	width: 100%;
-	height: 5%;
-	background-color: #52bad5;
-	border-bottom: 1px solid #2C9AB7;
+    width: 100%;
+    height: 5%;
+    background-color: #C97417;
+    border-bottom: 1px solid #2C9AB7;
 }
 .logo {
 	color: #fff;
@@ -33,13 +33,14 @@ header {
 	float: left;
 	margin-top: 15px;
 	margin-left: 25px;
-	letter-spacing: 4px;
+	letter-spacing: 0px;
 }
 nav {
-	float: right;
-	width: 50%;
-	text-align: right;
-	margin-right: 25px;
+    float: right;
+    width: 50%;
+    text-align: right;
+    margin-right: 25px;
+    background-color: #C97417;
 }
 header nav ul {
 	list-style: none;
@@ -69,7 +70,7 @@ ul li:hover a {
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 0px;
-	letter-spacing: 4px;
+	letter-spacing: 1px;
 }
 /* Hero Section */
 .hero {
@@ -82,12 +83,12 @@ ul li:hover a {
 	color: #717070;
 }
 .tagline {
-	text-align: center;
-	color: #FFFFFF;
-	margin-top: 4px;
-	font-weight: lighter;
-	text-transform: uppercase;
-	letter-spacing: 1px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-top: 4px;
+    font-weight: lighter;
+    text-transform: none;
+    letter-spacing: 0px;
 }
 /* About Section */
 .text_column {
@@ -357,16 +358,17 @@ nav ul li {
 	margin-left: 0px;
 	color: #043745;
 }
+header a .logo {
+}
 .container header nav {
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	width: 100%;
-	float: none;
-	overflow: auto;
-	display: inline-block;
-	background: #52bad5;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    width: 100%;
+    float: none;
+    overflow: auto;
+    display: inline-block;
 }
 header nav ul {
 	padding: 0px;
